woost/admin/ui/resources/styles/woost-admin-ui-contextmenusource.scss
:host {
    position: relative;
}

.ContextMenu {
    z-index: 1;
    position: absolute;
    height: 0;
    overflow: hidden;
    opacity: 0;
    transition: opacity 0.5s ease;

    :host([contextMenuExpanded='true']) & {
        overflow: visible;
        opacity: 1;
        transition: opacity 0.5s ease;
    }

    .panel {
        box-shadow: 2px 2px 6px rgba(black, 0.2);
    }
}

